DeploymentStrategies/4- Blue Green/bluegreen-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sercan-app-2
  namespace: default
  labels:
    app: sercan-app
spec:
  selector:
    matchLabels:
      app: sercan-app
      strategies: green
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sercan-app
        strategies: green
    spec:
      containers:
      - name: sercan-app
        image: denizturkmen/rollingupdatev2:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 80
          name: sercan-app
      restartPolicy: Always
