DeploymentStrategies/4- Blue Green/bluegreen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sercan-svc
  namespace: default
spec:
  selector:
    app: sercan-app
    strategies: blue
  type: ClusterIP
  ports:
  - name: sercan-svc
    protocol: TCP
    port: 80
    targetPort: 80
