DeploymentStrategies/4- Blue Green/bluegreen-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-blue-green
  namespace: default
  labels:
    app: sercan-app
    strategies: blue
spec:
  ingressClassName: nginx
  rules:
  - host: bluegreen.com
    http:
      paths:
      - backend:
          service:
            name: sercan-svc
            port:
              number: 80
        path: /
        pathType: Prefix
